# AIDocumentIndexer

./: .env.backup  .env.example  .gitignore  CONTRIBUTING.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_TRACKER.md  INSTALLATION.md  MASTER_PLAN.md  PHASE_66_INTEGRATION_PLAN.md  PROGRESS.md  README.md  alembic.ini  package-lock.json
backend/: constants.py  nohup.out  pyproject.toml  pytest.ini  requirements.txt
backend/api/: deps.py  errors.py  main.py  websocket.py
backend/api/middleware/: __init__.py  auth.py  cost_limit.py  license_check.py  rate_limit.py  request_id.py
backend/api/routes/: __init__.py  admin.py  agent.py  agent_templates.py  agentic.py  analytics.py  annotations.py  audio.py  auth.py  bots.py  cache.py  charts.py  chat.py  collaboration.py  colpali.py  compression.py  connectors.py  content_review.py  cost_optimization.py  costs.py  crawler.py  database.py  diagnostics.py  document_templates.py  documents.py  downloads.py  dspy_optimization.py  embedding_defense.py  embeddings.py  ensemble.py  evaluation.py  experiments.py  external_api.py  folders.py  gateway.py  generate.py  generation_templates.py  indexer.py  integrations.py  intelligence.py  (+41 more)
backend/connectors/: __init__.py  confluence.py  email.py  github.py  google_drive.py  jira.py  notion.py  slack.py
backend/core/: __init__.py  config.py  monitoring.py  performance.py
backend/db/: __init__.py  database.py  models.py  models_multi_embedding.py  seed_agents.py  seed_users.py
backend/db/migrations/: env.py
backend/integrations/discord_bot/: __init__.py  bot.py  handlers.py
backend/integrations/slack_bot/: __init__.py  app.py  commands.py  handlers.py
backend/integrations/teams_bot/: __init__.py  bot.py  cards.py  handlers.py
backend/integrations/telegram_bot/: __init__.py  bot.py  handlers.py
backend/langchain_ext/: __init__.py  chains.py
backend/mcp/: __init__.py  resources.py  server.py  tools.py
backend/processors/: __init__.py  chunker.py  universal.py
backend/ray_workers/: __init__.py  config.py
backend/scripts/: backfill_chunk_embeddings.py  backfill_entity_embeddings.py  check_all_embeddings.py  check_embedding_dimension.py  check_embeddings.py  cleanup_all_data.py  cleanup_knowledge_graph.py  download_paddle_models.py  generate_additional_embeddings.py  init_ocr_settings.py  migrate_embedding_dimensions.py  migrate_entity_embeddings_768d.py  migrate_paddle_models.py  seed_sample_workflow.py  show_embedding_examples.py  sync_upload_jobs.py  test_embedding_quality.py  test_rag_search.py  update_chroma_metadata.py
backend/services/: __init__.py  adaptive_chunking.py  adaptive_router.py  admin_settings.py  advanced_rag_utils.py  advanced_reranker.py  agent_builder.py  agent_evaluation.py  agent_knowledge.py  agent_memory.py  agent_orchestrator.py  agentic_rag.py  amem_memory.py  analytics.py  annotations.py  answer_refiner.py  attention_rag.py  audit.py  auto_tagger.py  base.py  bge_m3_embeddings.py  binary_quantization.py  bulk_progress.py  celery_manager.py  channel_gateway.py  chart_generator.py  chat_commands.py  chat_privacy.py  chunking.py  colbert_reranker.py  colbert_retriever.py  collaboration.py  colpali_retriever.py  conflict_detector.py  content_quality.py  context_compression.py  context_optimizer.py  context_sufficiency.py  contextual_chunking.py  contextual_embeddings.py  (+159 more)
backend/services/agents/: __init__.py  agent_base.py  cost_estimator.py  manager_agent.py  tools.py  trajectory_collector.py  validator_agent.py  worker_agents.py
backend/services/audio/: __init__.py  audio_mixer.py  audio_overview.py  cartesia_tts.py  chapter_markers.py  pronunciation.py  script_generator.py  tts_service.py  ultra_fast_tts.py
backend/services/cache/: __init__.py  base.py  decorators.py  keys.py  memory.py  redis.py
backend/services/connectors/: __init__.py  base.py  box.py  confluence.py  dropbox.py  github.py  google_drive.py  notion.py  onedrive.py  registry.py  scheduler.py  slack_data.py  youtube.py
backend/services/cython_extensions/: __init__.py  _fallback.py  setup.py  similarity.c  similarity.pyx
backend/services/generation/: __init__.py  citations.py  config.py  models.py  service.py
backend/services/generator/: __init__.py  citations.py  config.py  content_models.py  content_reviewer.py  models.py  prompt_builder.py  service.py  styles.py  template_analyzer.py  template_service.py  utils.py  verification.py
backend/services/llm_gateway/: __init__.py  budget.py  gateway.py  usage.py  virtual_keys.py
backend/services/prompt_optimization/: __init__.py  dspy_example_collector.py  dspy_optimizer.py  dspy_signatures.py  prompt_builder_agent.py  prompt_version_manager.py
backend/services/rag_module/: __init__.py  advanced_optimizations.py  config.py  models.py  prompts.py  service.py
backend/services/text_to_sql/: __init__.py  complexity_router.py  schema_linker.py  service.py  validators.py
backend/storage/audio/: .gitkeep
backend/tasks/: __init__.py  document_tasks.py
backend/templates/agents/: chat_agent_advanced.json  voice_agent_advanced.json
backend/templates/workflows/: customer_support_agent.json  document_analysis_pipeline.json
backend/tests/: __init__.py  conftest.py  test_imports.py  test_phase_94.py
backend/tests/api/: __init__.py  test_auth.py  test_documents.py  test_middleware.py
backend/tests/benchmarks/: test_performance.py
backend/tests/integration/: test_full_pipeline.py  test_verification_checklist.py
backend/tests/services/: __init__.py  test_agent_base.py  test_agent_memory.py  test_cost_estimator.py  test_embeddings.py  test_llm.py  test_mode_router.py  test_permissions.py  test_sandbox.py  test_security.py
backend/utils/: async_helpers.py  platform.py
desktop-clients/cli/: README.md  pyproject.toml
desktop-clients/cli/mandala_sync/: __init__.py  __main__.py  api.py  cli.py  config.py  watcher.py
desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-tauri/src-tauri/icons/: README.md
desktop-tauri/src-tauri/src/: database.rs  embeddings.rs  file_watcher.rs  lib.rs  licensing.rs  (+3 more)
(+508 files in other folders)
