[project]
name = "aidocumentindexer-backend"
version = "0.1.0"
description = "AI-powered document indexing and RAG system"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AIDocumentIndexer Team" }
]
keywords = ["ai", "rag", "document-indexing", "llm", "fastapi"]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "greenlet>=3.0.0",
    "aiosqlite>=0.19.0",
    # LLM & RAG (pinned to 0.3.x for stability)
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langchain-litellm>=0.1.0",
    "langgraph>=0.2.0,<1.0.0",
    "litellm>=1.50.0",
    # Embeddings
    "sentence-transformers>=2.2.2",
    "tiktoken>=0.5.2",
    # Local Vector Store
    "chromadb>=0.5.0",
    # Document Processing - PDF
    "pymupdf>=1.23.0",
    "pypdf>=3.17.0",
    # Document Processing - Office
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    # Document Processing - Universal
    "unstructured[pdf,docx,pptx,xlsx]>=0.12.0",
    # OCR
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "pillow>=10.2.0",
    # File type detection
    "python-magic>=0.4.27",
    "filetype>=1.2.0",
    # Email parsing
    "extract-msg>=0.48.0",
    "email-validator>=2.1.0",
    # Ray (Distributed Processing)
    "ray[default]>=2.9.0",
    # Web Scraping
    "crawl4ai>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    # Caching & Sessions
    "redis>=5.0.0",
    "hiredis>=2.3.0",
    # File Watching
    "watchdog>=3.0.0",
    # Document Generation
    "reportlab>=4.0.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyjwt>=2.10.1",
    "langchain-text-splitters>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "db", "langchain_ext", "processors", "ray_workers"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
